# sharex-backend

./: .gitignore  .vercelignore  Cargo.toml  README.md
controller/: Cargo.toml
controller/src/: env.rs  errs.rs  lib.rs  models.rs
handler/: Cargo.toml  vercel.json
handler/api/: images.rs
handler/api/auth/: callback.rs  login.rs  me.rs
handler/api/images/: [id].rs
oidc-auth/: Cargo.toml
oidc-auth/src/: errs.rs  exchanger.rs  lib.rs  models.rs  validator.rs
persistence/: Cargo.toml
persistence/migrations/postgres/: 00001_init.sql
persistence/src/: lib.rs  models.rs  pg.rs
persistence/src/definitions/: images.rs  mod.rs  tokens.rs
persistence/src/implementations/pg/: images.rs  mod.rs  tokens.rs
storage/: Cargo.toml
storage/src/: errors.rs  lib.rs  s3driver.rs
vercel-utils/: Cargo.toml
vercel-utils/src/: auth.rs  cookies.rs  lib.rs  macros.rs  urls.rs
